# acme-pim

./: .gitignore  CMakeLists.txt  LICENSE  LinkedList.cpp  LinkedList.h  Nodo.cpp  Nodo.h  main.cpp  readme.md
src/: io.h  logic.cpp  logic.hpp  terminal.cpp  terminal_implementations.cpp
src/Lab/: LabMenu.cpp  LabMenu.h
src/Lab/LabLogic/: Queue.cpp  Queue.h
src/View/: terminal.cpp  terminal.h  terminal_implementations.cpp  terminal_implementations.h  terminal_operation.cpp  terminal_operation.h
src/View/SubMenus/Attributes/: Atributos.cpp  Atributos.h
src/View/SubMenus/Products/: Productos.cpp
src/View/SubMenus/Search/: Busqueda.cpp  Busqueda.h
src/database/: database.cpp  database.h
src/db/: db.cpp  db.h  setup.cpp
src/entities/: data_classes.h
src/io/: io.h  terminal.h  terminal_implementations.cpp  terminal_implementations.h
src/models/: category.cpp  category.h  pim.cpp  pim.h  product.cpp  product.h  variant.h
src/store/: db.cpp  db.h  setup.h
src/views/: app.cpp  app.h  menu.cpp  menu.h  operation.cpp  operation.h
src/views/menus/: products.cpp  products.h
src/views/menus/Categories/: categories.cpp  categories.h
src/views/menus/Category/: Categorias.cpp  Categorias.h
src/views/menus/Products/: Productos.h  products.cpp  products.h
src/views/menus/Variants/: Variantes.cpp  Variantes.h  variants.cpp  variants.h
